made some progress, still has bugs
fixed:
 +sidebar display=none after delay so that it doesn’t get in the way of
panning
 +truncated lat/long vale
 +the js+template logic now properly creates overlays for everything
stored in DB

bugs to be fixed:
 + double click register on tr+toggle
 + overlays that haven’t been added onload don’t seem to load reliably
on toggle

--- a/synced_dir/css/main.css
+++ b/synced_dir/css/main.css
@@ -4,12 +4,6 @@ body, html {
   overflow: hidden; }
 
 
-.empty {
-  position: absolute;
-  width: 90%;
-  left: -100px;
-
-}
 
 body {
   font: 100% "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -33,19 +27,11 @@ body {
   overflow-x: hidden;
   overflow-y: auto; }
 
-.sidebar #coords-lat{
-  float: left;
-  margin-left: 5px;
-  margin-top: 5px; }
 
-}
-
-.sidebar #coords-lon{
-  clear: both;
-  float: left;
-  margin-left: 5px;
-  margin-top: 5px; }
-
+.coords{
+    display:block;
+    margin-left: 12px;
+    margin-top: 5px;
 }
 
 #sidebar-left {
@@ -54,6 +40,11 @@ body {
 #sidebar-left.clicked {
   left: -61px;
   opacity: 0; }
+
+
+#sidebar-left.hidden {
+    display:none;
+}
 
 #sidebar-right {
   right: 0px; }
@@ -98,7 +89,7 @@ body {
 }
 
  #line-lat {
- 
+
    position: absolute;
   background-color:#fff;
    border: 1px solid #666;
@@ -114,13 +105,13 @@ body {
  }
 
   #line-lon {
- 
+
     position: absolute;
   background-color:#fff;
    border: 1px solid #666;
   border-radius: 2px;
   z-index: 2;
- 
+
   width: 1px;
   height: 100%;
   z-index: 1;
